fix z-index

--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -227,6 +227,7 @@ html{
     display: none;
     cursor: pointer;
     padding: 8px 0;
+    z-index: 2;
 }
 
 .select-input__item {
