--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -708,6 +708,7 @@
     cursor: pointer;
     display: none;
     border-radius: 3px;
+    z-index: 2;
 }
 
 .header__search-select:hover 
